remove body gradient, fix spacing, update text for newsletter validate html and css

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,6 @@ body {
   font-size: 100%;
   font-family: Helvetica, Arial, sans-serif;
   padding: .5rem;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(135, 149, 255, 0.1));
 }
 
 p {
@@ -142,8 +141,6 @@ h4 {
   color: white;
 }
 
-
-
 /*********** FORM STYLES SECTION ***********/
 
 form {
@@ -165,8 +162,6 @@ input {
   width: 90%;
 }
 
-/* To cover input styles */
-
 .send-button {
   background-color: royalblue;
   width: 10rem;
@@ -182,13 +177,11 @@ input {
 
 /* Media query for larger screens */
 
-
 @media (min-width: 565px){
-    body {
+  body {
     font-size: 100%;
     font-family: Helvetica, Arial, sans-serif;
     padding: .5rem;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(135, 149, 255, 0.1));
   }
 
   p {
@@ -227,6 +220,7 @@ input {
   }
 
   /**************** HERO *****************/
+  
   .logo-header {
     display: flex;
     flex-flow: row wrap;
@@ -347,8 +341,6 @@ input {
     width: auto;
   }
 
-  /* To cover input styles */
-
   .send-button {
     background-color: royalblue;
     width: 10rem;
@@ -360,7 +352,3 @@ input {
     color: aliceblue;
   }
 }
-
-  
-
-/* Media query for time of day styling */
